@@ -1,10 +1,10 @@
 {
-  "count": 77,
+  "count": 76,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-04-13T00:00:00Z",
-      "count": 11,
+      "count": 10,
       "uniques": 1
     },
     {
